syntax = "proto3";

package cloud.lianmi.im.syn;
option go_package = "github.com/lianmi/servers/api/proto/syn";

//2.7.1
//API描述
//客户端登录成功后，将本地维护的各模块的最后更新时间通过sync同步至服务器端，
//如果服务端用户资料更新时间与本地时间存在差异，im服务器则通过该指令将完整用户信息push至客户端。
//使用场景
//登录以及断线重连（清空浏览器缓存localstorage,给对方方消息,sync并不会触发,因为数据库不存在需要执行报错） 
//清空本地所有缓存后,重新登录,则执行所有的同步,timetag为0, 包括:syncProfile syncFriendUsers
//API  C2S
message SyncReq{   
   //个人信息，触发同步当前用户资料事件事件
   //是否必填-是 
   fixed64 myInfoAt=1;
   //好友关系列表，触发好友列表同步事件事件
   //是否必填-是
   fixed64 friendsAt=2;
   //好友用户信息，触发好友信息同步事件事件
   //是否必填-是 
   fixed64 friendUsersAt=3;   
   //群组信息，触发同步群组事件事件
   //是否必填-是 
   fixed64 teamsAt=4;   
   //会话最大确认时间戳，触发同步会话最大确认时间事件
   //是否必填-是 
   fixed64 conversationAckAt=5;
   //标签最后同步时间戳，触发同步用户标签列表事件
   //是否必填-是 
   fixed64 tagsAt=6;
   //系统消息最后同步时间戳，触发同步系统离线消息事件
   //是否必填-是 
   fixed64 systemMsgAt=7;
}
//只包含状态码，无内容载体
message SyncRsp{

}
 






